<resources>
    <string name="app_name">Blackjack</string>
    <string name="player_name">Player Name: </string>
    <string name="wins">Wins: </string>
    <string name="number_placeholder">0</string>
    <string name="chip_placeholder">1000</string>
    <string name="name_placeholder">Doug Shook</string>
    <string name="losses">Losses: </string>
    <string name="logout">Logout</string>
    <string name="chips">Chips: </string>
    <string name="leaderboard">Leaderboard</string>
    <string name="unknown">Unknown</string>
    <string name="bet_amount">Bet Amount</string>
    <string name="bet">Bet</string>
    <string name="rebet">Rebet</string>
    <string name="player_value">Player Value: </string>
    <string name ="bjpay">Blackjack Pays 3:2</string>
    <string name="dealer_value">Dealer Value: </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ex_player_name">DigDoug</string>
    <string name="ex_position">1.</string>
    <string name="ex_wins">200</string>
    <string name="player_name_leaderboard">Name</string>
    <string name="wins_leaderboard">Wins</string>
    <string name="losses_leaderboard">Losses</string>
    <string name="chips_leaderboard">Chips</string>
    <string name="profile">Profile</string>
    <string name="blackjacks">Blackjacks: </string>
    <string name="ranking">Ranking: </string>
    <string name="delete">Delete Account</string>
    <string name="email">Email:</string>
    <string name="new_password">New Password: </string>
    <string name="save_changes">Save Changes</string>
    <string name="password">Password: </string>
</resources>
