<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/table">


    <LinearLayout
        android:id="@+id/btn_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/leaderboard" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/unknown" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_holder">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.60">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:text="@string/player_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/playerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_placeholder"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="logout" />


    </LinearLayout>




    <LinearLayout
        android:id="@+id/stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:text="@string/wins" />

            <TextView
                android:id="@+id/wins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:text="@string/number_placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:text="@string/losses" />

            <TextView
                android:id="@+id/losses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:text="@string/number_placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:text="@string/chips" />

            <TextView
                android:id="@+id/chips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:text="@string/number_placeholder" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/deck"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:src="@drawable/back"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dealer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deck"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/player"
        android:layout_width="match_parent"
        android:layout_height="80dp"

        android:layout_marginTop="75dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dealer"
        >
<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="75dp"-->
<!--            android:src="@drawable/back"/>-->
<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="75dp"-->
<!--            android:src="@drawable/back"/>-->
<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="75dp"-->
<!--            android:src="@drawable/back"/>-->
    </LinearLayout>



    <LinearLayout
        android:id="@+id/bet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player">
        <EditText
            android:id="@+id/bet_input"
            android:inputType="numberSigned"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/bet_amount"
            android:textColorHint="@color/text"
            android:textColor="@color/text"
            android:textStyle="bold"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/bet"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>