<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/table">
    <LinearLayout
        android:id="@+id/profileNameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp">
        <EditText
            android:inputType="textPersonName"
            android:id="@+id/profileName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/text"
            android:gravity="center"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/profileChips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/text"
        android:textSize="30sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileNameContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/chips_leaderboard"/>


    <LinearLayout
        android:id="@+id/profileStatsContainer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileChips"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:text="@string/wins"
            android:textColor="@color/text"
            android:gravity="left"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/profileWins"
            android:textSize="20sp"
            android:text="@string/wins"
            android:textColor="@color/text"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profileStatsContainer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileStatsContainer1"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:text="@string/losses"
            android:textColor="@color/text"
            android:gravity="left"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/profileLosses"
            android:textSize="20sp"
            android:text="@string/losses"
            android:textColor="@color/text"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profileStatsContainer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileStatsContainer2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:text="@string/email"
            android:textColor="@color/text"
            android:gravity="left"
            />
        <EditText
            android:layout_width="0dp"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/profileEmail"
            android:textSize="20sp"
            android:hint="@string/email"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profileStatsContainer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileStatsContainer3"
        >
        <TextView
            android:id="@+id/passwordText"
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:text="@string/new_password"
            android:textColor="@color/text"
            android:gravity="left"
            />
        <EditText
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/profileNewPassword"
            android:textSize="20sp"
            android:textColorHint="@color/text"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/profileBtnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileStatsContainer4"
        >
        <Button
            android:id="@+id/profileLogout"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:onClick="logout"
            android:text="@string/logout"

            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:id="@+id/profileDelete"
            android:onClick="deleteProfile"
            android:textSize="18sp"
            android:text="@string/delete"
            android:gravity="center"
            />

    </LinearLayout>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileBtnContainer"
        android:id="@+id/updateProfile"
        android:onClick="updateProfile"
        android:textSize="18sp"
        android:text="@string/save_changes"
        android:gravity="center"
        />




</androidx.constraintlayout.widget.ConstraintLayout>